# cmake-tutorial

examples/libs/: CMakeLists.txt
examples/libs-no-src/: CMakeLists.txt  main.c
examples/libs/src/: awesome.c
